# CSDS

./: .gitignore
Lab1/: CMakeLists.txt  README.md
Lab1/Data/Example/: Input.txt
Lab1/Data/Task3/: CheckCracker.sh  Input100.txt  Input150.txt  Input500.txt
Lab1/Data/Task4/: CheckCracker.sh  Key10.txt  Key100.txt  Key13.txt  Key20.txt  Key200.txt  Key40.txt  Key5.txt  Key500.txt
Lab1/Utility/: CMakeLists.txt  File.cpp  File.hpp  VigenereCommon.cpp  VigenereCommon.hpp
Lab1/VigenereCracker/: CMakeLists.txt  main.cpp
Lab1/VigenereDecoder/: CMakeLists.txt  main.cpp
Lab1/VigenereEncoder/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  README.md
Lab2/Client/: .gitignore  Client.pro  README.md
Lab2/Client/docs/: concept.drawio.xml
Lab2/Client/res/: qml.qrc
Lab2/Client/res/qml/: FileChooser.qml  FileViewer.qml  LoginForm.qml  ServerChooser.qml  main.qml
Lab2/Client/res/ts/: Client_ru_BY.ts
Lab2/Client/src/: controller.cpp
Lab2/Client/src/client/: controller.h
Lab2/DummyClient/: CMakeLists.txt  Main.cpp
Lab2/Server/: AuthService.cpp  AuthService.hpp  CMakeLists.txt  FileService.cpp  FileService.hpp  Main.cpp  Server.cpp  Session.cpp  Session.hpp
Lab2/Server/EnvironmentExample/: auth.hashes
Lab2/Server/EnvironmentExample/files/: test.txt
Lab2/Shared/: CMakeLists.txt  GM.cpp  GM.hpp  Idea.cpp  Idea.hpp  MessageType.hpp  RSA.cpp  RSA.hpp  StateMachine.cpp  StateMachine.hpp
Lab2/TestShared/: CMakeLists.txt  GM.cpp  Idea.cpp  RSA.cpp  TestModule.cpp
Lab4/: CMakeLists.txt  EM.cpp  EM.hpp  Main.cpp  MathUtils.cpp  MathUtils.hpp  README.md
